--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <application
         android:name=".MyApp"
         android:allowBackup="true"
@@ -14,7 +17,17 @@
         android:theme="@style/Theme.Asistencia"
         tools:targetApi="31">
         <activity
+            android:name=".activities.ClaseAlumnosDispositivosActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light">
+        </activity>
+        <activity
             android:name=".activities.CrearClaseActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light">
+        </activity>
+        <activity
+            android:name=".activities.ClaseActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light">
         </activity>
